<resources>
    <string name="app_name">Checkers</string>
    <string name="activity_name">Вход в учетную запись</string>
    <string name="forgot_password">Забыли пароль?</string>
    <string name="register">Регистрация</string>
    <string name="user_name">Имя пользователя:</string>
    <string name="password">Пароль:</string>
    <string name="connection_status">Статус:</string>
    <string name="help_title">Помощь</string>
    <string name="repeat_password">Повторите пароль:</string>
    <string name="new_password">Новый пароль:</string>
    <string name="control_question">Контрольный вопрос:</string>
    <string name="control_qst">Контрольный вопрос</string>
    <string name="answer_control_question">Ответ на контрольный вопрос:</string>
    <string name="continuee">Продолжить</string>
    <string name="password_recovery">Восстановление пароля</string>
    <string name="password_changing">Изменение пароля</string>
    <string name="password_change">Измененить пароля</string>
    <string name="ranked_match">Рейтинговый матч</string>
    <string name="rules_list">Набор игровых правил</string>
    <string name="russian_checkers">Русские шашки</string>
    <string name="start_search">Начать поиск</string>
    <string name="stop_search">Остановить поиск</string>
    <string name="join_tour">Присоедениться к турниру</string>
    <string name="create_tour">Создать пользовательский турнир</string>
    <string name="play_with_bot">Игра с ботом</string>
    <string name="friends_list">Список друзей</string>
    <string name="main_menu">Главное меню</string>
    <string name="points">1005 очков</string>
    <string name="nikname">Никнейм</string>
    <string name="nikname1">Никнейм_1</string>
    <string name="add_friend">Добавить друга</string>
    <string name="invitation_to_play">Приглашение сыграть с Никнейм_1</string>
    <string name="invitation_to_tour">Приглашение в турнир от Никнейм_1</string>
    <string name="victory_string">Победа против Никнейм_1: +30 очков</string>
    <string name="losing_string">Поражение против Никнейм_1: -20 очков</string>
    <string name="sec_30">30</string>
    <string name="move_time">Время на ход (секунды)</string>
    <string name="invite">Пригласить</string>
    <string name="oh_shit_go_back">Вернуться назад</string>
    <string name="back_to_authorize">Вернуться к окну входа</string>
    <string name="search_friend">Поиск друга</string>
    <string name="yout_turn">Ваш ход</string>
    <string name="last_moves">Последние ходы</string>
    <string name="random_move">B2-A3 A7-B6</string>
    <string name="random_move1">G3-H3</string>
</resources>