<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.GameActivity"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="5"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="90"
            android:layout_gravity="center"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter_semibold"
                android:text="@string/yout_turn"
                android:textColor="@color/black"
                android:textSize="30sp" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="376dp"
                android:background="@drawable/layout_custom"
                android:paddingLeft="1dp"
                android:paddingTop="1dp"
                android:paddingRight="1dp"
                android:paddingBottom="1dp">

            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter_semibold"
                android:text="@string/last_moves"
                android:textColor="@color/black"
                android:textSize="30sp" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/layout_custom"
                android:paddingLeft="1dp"
                android:paddingTop="1dp"
                android:paddingRight="1dp"
                android:paddingBottom="1dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="55dp"
                        android:paddingRight="3dp"
                        android:paddingLeft="3dp">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/black_dot_icon"
                            android:layout_marginTop="22dp"
                            android:layout_marginLeft="20dp"
                            android:layout_marginRight="20dp"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"

                            android:layout_marginTop="17dp"
                            android:layout_marginBottom="14dp"
                            android:fontFamily="@font/inter_semibold"
                            android:text="@string/random_move"
                            android:textColor="@color/black"
                            android:textSize="15sp" />

                    </LinearLayout>

                    <View
                        android:id="@+id/view2"
                        android:layout_width="match_parent"

                        android:layout_height="1dp"
                        android:background="@color/stroke"
                        android:foregroundGravity="center_horizontal"
                        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
                        tools:layout_editor_absoluteX="1dp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="55dp"
                        android:paddingRight="3dp"
                        android:paddingLeft="3dp">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/black_dot_icon"
                            android:layout_marginTop="20dp"
                            android:layout_marginLeft="20dp"
                            android:layout_marginRight="20dp"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"

                            android:layout_marginTop="15dp"
                            android:layout_marginBottom="14dp"
                            android:fontFamily="@font/inter_semibold"
                            android:text="@string/random_move1"
                            android:textColor="@color/black"
                            android:textSize="15sp" />

                    </LinearLayout>

                    <View
                        android:id="@+id/view2"
                        android:layout_width="match_parent"

                        android:layout_height="1dp"
                        android:background="@color/stroke"
                        android:foregroundGravity="center_horizontal"
                        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
                        tools:layout_editor_absoluteX="1dp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="55dp"
                        android:orientation="horizontal"
                        android:paddingLeft="10.5dp"
                        android:paddingRight="10.5dp"
                        android:paddingTop="7.5dp"
                        android:paddingBottom="7.5dp">

                        <androidx.constraintlayout.widget.ConstraintLayout
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="11"
                            android:background="@drawable/profile_image_layout"
                            android:layout_marginRight="-1dp"
                            android:clipToPadding="false">

                            <ImageButton
                                android:id="@+id/settingsBtn"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_weight="0"
                                android:layout_marginRight="-1dp"
                                android:background="@drawable/img_prifile"
                                android:paddingTop="15dp"
                                android:paddingBottom="15dp"
                                android:src="@drawable/avatar_icon"
                                android:clipToOutline="true"
                                />

                        </androidx.constraintlayout.widget.ConstraintLayout>

                        <androidx.appcompat.widget.AppCompatButton
                            android:id="@+id/forgotPassword"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="39"
                            android:layout_marginRight="-1dp"
                            android:background="@drawable/btn"
                            android:fontFamily="@font/inter_semibold"
                            android:text="@string/nikname"
                            android:textAllCaps="false"
                            android:textColor="@color/black"
                            android:textSize="15sp" />

                        <androidx.appcompat.widget.AppCompatButton
                            android:id="@+id/registerButton"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="39"
                            android:layout_marginRight="-2dp"
                            android:background="@drawable/btn"
                            android:fontFamily="@font/inter_semibold"
                            android:text="@string/points"
                            android:textAllCaps="false"
                            android:textColor="@color/black"
                            android:textSize="15sp" />

                        <ImageButton
                            android:id="@+id/settingsBtn"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="11"

                            android:background="@drawable/exit_btn"
                            android:paddingTop="15dp"
                            android:paddingBottom="15dp"
                            android:src="@drawable/flag_icon"
                            android:onClick="showSettingsMenu"
                            />

                    </LinearLayout>

                    <View
                        android:id="@+id/view2"
                        android:layout_width="match_parent"

                        android:layout_height="1dp"
                        android:background="@color/stroke"
                        android:foregroundGravity="center_horizontal"
                        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
                        tools:layout_editor_absoluteX="1dp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="55dp"
                        android:orientation="horizontal"
                        android:paddingLeft="10.5dp"
                        android:paddingRight="10.5dp"
                        android:paddingTop="7.5dp"
                        android:paddingBottom="7.5dp"
                        android:layout_marginBottom="3dp">

                        <androidx.constraintlayout.widget.ConstraintLayout
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="11"
                            android:background="@drawable/profile_image_layout"
                            android:layout_marginRight="-1dp"
                            android:clipToPadding="false">

                            <ImageButton
                                android:id="@+id/settingsBtn"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_weight="0"
                                android:layout_marginRight="-1dp"
                                android:background="@drawable/img_prifile"
                                android:paddingTop="15dp"
                                android:paddingBottom="15dp"
                                android:src="@drawable/avatar_icon"
                                android:clipToOutline="true"
                                />

                        </androidx.constraintlayout.widget.ConstraintLayout>

                        <androidx.appcompat.widget.AppCompatButton
                            android:id="@+id/forgotPassword"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="39"
                            android:layout_marginRight="-1dp"
                            android:background="@drawable/btn"
                            android:fontFamily="@font/inter_semibold"
                            android:text="@string/nikname1"
                            android:textAllCaps="false"
                            android:textColor="@color/black"
                            android:textSize="15sp" />

                        <androidx.appcompat.widget.AppCompatButton
                            android:id="@+id/registerButton"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="39"
                            android:layout_marginRight="-2dp"
                            android:background="@drawable/btn"
                            android:fontFamily="@font/inter_semibold"
                            android:text="@string/points"
                            android:textAllCaps="false"
                            android:textColor="@color/black"
                            android:textSize="15sp" />

                        <ImageButton
                            android:id="@+id/settingsBtn"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="11"

                            android:background="@drawable/exit_btn"
                            android:paddingTop="15dp"
                            android:paddingBottom="15dp"
                            android:src="@drawable/settings_icon"
                            />

                    </LinearLayout>

                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="5"/>

    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>