<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="376dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter_semibold"
            android:text="@string/password_recovery"
            android:textColor="@color/black"
            android:textSize="30sp" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/layout_custom"
            android:paddingLeft="1dp"
            android:paddingTop="1dp"
            android:paddingRight="1dp"
            android:paddingBottom="1dp">

            <LinearLayout
                android:id="@+id/list"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0">

                <LinearLayout
                    android:id="@+id/linearLayout2"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="17dp"
                    android:layout_marginBottom="15dp"
                    android:layout_marginEnd="15dp"
                    android:background="@drawable/layout_inner_element"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/imageView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginRight="5dp"
                        android:layout_marginBottom="5dp"
                        android:layout_weight="0"
                        android:src="@drawable/user_icon" />

                    <View
                        android:layout_width="1dp"
                        android:layout_height="match_parent"
                        android:background="@color/stroke" />

                    <EditText
                        android:id="@+id/editTextTextPersonName"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="0"
                        android:background="@null"
                        android:ems="10"
                        android:fontFamily="@font/inter_semibold"
                        android:hint="@string/user_name"
                        android:inputType="textPersonName"
                        android:paddingLeft="10dp"
                        android:textColor="@color/black"
                        android:textSize="15sp" />

                </LinearLayout>


            </LinearLayout>

            <View
                android:id="@+id/view"
                android:layout_width="match_parent"

                android:layout_height="1dp"
                android:background="@color/stroke"
                android:foregroundGravity="center_horizontal"
                app:layout_constraintBottom_toTopOf="@+id/linearLayout"

                app:layout_constraintTop_toBottomOf="@+id/list"
                tools:layout_editor_absoluteX="1dp" />

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:paddingBottom="9dp"
                android:paddingTop="7dp"
                android:paddingLeft="15dp"

                android:paddingRight="15dp"

                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <ImageButton
                    android:id="@+id/settingsBtn"
                    android:layout_width="40dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0"
                    android:layout_marginRight="-1dp"
                    android:background="@drawable/stg_btn_rect"
                    android:paddingTop="15dp"
                    android:paddingBottom="15dp"
                    android:src="@drawable/settings_icon"
                    android:onClick="showSettingsMenu"/>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/continueButton"
                    android:layout_width="263.5dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0"
                    android:layout_marginRight="-1dp"
                    android:background="@drawable/btn"
                    android:fontFamily="@font/inter_semibold"
                    android:text="@string/continuee"
                    android:textAllCaps="false"
                    android:textColor="@color/black"
                    android:textSize="15sp" />

                <ImageButton
                    android:id="@+id/backButton"
                    android:layout_width="40dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0"

                    android:background="@drawable/exit_btn"
                    android:paddingTop="15dp"
                    android:paddingBottom="15dp"
                    android:src="@drawable/exit_icon"
                    />

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>